# colvec

./: .gitignore  LICENSE  build_index.py  check_corpus.py  encode.py  encode_corpus.py  inspect_corpus.py  main.py  pyproject.toml  search.py  search_ivf.py  test.py
benchmarks/: check_contiguous.py  encode_scifact.py  encode_scifact_chunked.py  measure_doc_lenghts.py  msmarco_ivf_pq_benchmark.py  msmarco_ivf_pq_rust.py  plot_pq_sweep.py  pq_sweep.py  qdrant_comparison.py  qdrant_encode.py  qdrant_ingest.py  qdrant_your_system.py  rust_speedup_check.py  scifact_augmentation_ab.py  scifact_benchmark.py  scifact_chunked_benchmark.py  scifact_inspect.py  scifact_ivf_pq_benchmark.py  scifact_ivf_residual_pq_rust_benchmark.py  scifact_pq_benchmark.py  scifact_pq_benchmark_fast.py  scifact_pq_benchmark_rust.py  scifact_residual_pq_benchmark.py  test_run_rust_kernel.py
benchmarks/results/: ivf_pq_sweep.json  msmarco_ivf_pq_rust_sweep.json  msmarco_ivf_pq_sweep.json  pq_m_sweep.json  qdrant_comparison.json  residual_pq_results.json  scifact_history.jsonl  scifact_ivf_residual_pq_rust.json
colvec/: encoder.py
colvec_kernel/: Cargo.toml  pyproject.toml
colvec_kernel/src/: lib.rs
quantization/: ivf_pq_build.py  ivf_pq_build_msmarco.py  pq_train.py  residual_pq_build.py
tests/: regression.py
