[project]
name = "colvec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.8.4",
    "ir-datasets>=0.5.11",
    "numpy>=2.4.4",
    "pylate>=1.0.0",
    "safetensors>=0.7.0",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.6.1",
]
